fix(Checkbox): Flex alignment and line height

--- a/react/Checkbox/Checkbox.less
+++ b/react/Checkbox/Checkbox.less
@@ -28,11 +28,10 @@
 
 .standard {
   .touchableText(@standard-type-scale);
-  line-height: normal;
+  line-height: (@row-height * 4);
   height: 100%;
   cursor: pointer;
   display: flex;
-  align-items: center;
 }
 
 .checkbox {
